# dflash-mlx

./: .gitignore  STATUS.md  pyproject.toml
benchmark/: agentic_proxy.py  aggregate_replay.py  bench_agentic_trace.py  bench_opencode_session.py  bench_pi_session.py  bench_prefix_cache_multiturn.py  benchmark.py  quartet_gqa_e2e_check.py  quartet_gqa_hook_check.py  quartet_gqa_microbench.py  quartet_gqa_validate.py
benchmark/results/: qwen3-5-27b-4bit-1024.json  qwen3-5-27b-4bit-16384.json  qwen3-5-27b-4bit-2048.json  qwen3-5-27b-4bit-32768.json  qwen3-5-27b-4bit-4096.json  qwen3-5-27b-4bit-8192.json  qwen3-5-35b-a3b-4bit-1024.json  qwen3-5-35b-a3b-4bit-16384.json  qwen3-5-35b-a3b-4bit-2048.json  qwen3-5-35b-a3b-4bit-4096.json  qwen3-5-35b-a3b-4bit-8192.json  qwen3-5-4b-1024.json  qwen3-5-4b-16384.json  qwen3-5-4b-2048.json  qwen3-5-4b-32768.json  qwen3-5-4b-4096.json  qwen3-5-4b-8192.json  qwen3-5-9b-1024.json  qwen3-5-9b-16384.json  qwen3-5-9b-2048.json  qwen3-5-9b-32768.json  (+2 more)
dflash_mlx/: adapter.py  bench_logger.py  draft_backend.py  engine.py  generate.py  kernels.py  model.py  prefix_cache.py  runtime.py  serve.py  verify_backend.py  verify_linear.py  verify_qmm.py
docs/: ARCHITECTURE.md  BENCHMARKING.md  OBSERVABILITY.md  RUNTIME_FLAGS.md
tests/: test_dflash_swa_mask.py  test_engine_acceptance.py  test_engine_event_contract.py  test_engine_prefill_helpers.py  test_engine_rollback.py  test_prefix_cache.py  test_prefix_cache_integration.py  test_sdpa_parity.py  test_serve_state_machine.py  test_verify_linear_parity.py  test_verify_qmm_parity.py
(+23 files in other folders)
