[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dflash-mlx"
version = "0.1.4.1"
description = "DFlash speculative decoding for Apple Silicon (MLX)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "bstnxbt"}]
dependencies = [
    "mlx>=0.31.0",
    "mlx-lm>=0.31.0",
]

[project.urls]
Homepage = "https://github.com/bstnxbt/dflash-mlx"

[project.scripts]
dflash = "dflash_mlx.generate:main"
dflash-serve = "dflash_mlx.serve:main"
dflash-benchmark = "benchmark.benchmark:main"
dflash-opencode-bench = "benchmark.bench_opencode_session:main"
dflash-pi-bench = "benchmark.bench_pi_session:main"

[tool.setuptools.packages.find]
include = ["dflash_mlx*", "benchmark*"]
